# secondmate

./: .gitignore  README.md  TESTING.md  dev.sh  index.html  job_queue.db  package-lock.json  package.json  pyproject.toml  reproduce_bug.py  resize_logo.py  tsconfig.app.json  verify_assets.py  verify_conditional_data.py  verify_injection.py  verify_sql_injection.py  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
backend/: debug_spark.py  requirements.txt
backend/app/: dependencies.py  main.py
backend/app/providers/: local_spark.py  spark_interface.py
secondmate/: cli.py  dependencies.py  dev_data.py  main.py  models.py  utils.py
secondmate/providers/: local_spark.py  spark_interface.py
secondmate/queue/: db.py  iceberg_result_cache.py  result_cache.py  runner.py
secondmate/routers/: jobs.py  table.py
secondmate/static/: index.html
secondmate/static/assets/: bicep-CT69anq1.js  css-D-slbKV0.js  css.worker-C-xLQqhi.js  cssMode-CoyGrl5D.js  editor.worker-DX46JrWG.js  freemarker2-B08pS6QO.js  handlebars-Dsr6pmey.js  html-D11PlZ40.js  html.worker-BVMmJEv3.js  htmlMode-CR3YL2bX.js  index-BMuKaw3g.js  index-C7t6CskC.css  index-CfWGRgRg.css  index-CndoXgKs.js  index-Gyne2P3W.css  index-Yr33fHWr.js  javascript-CHYWHOYq.js  json.worker-DIfQLPOs.js  jsonMode-D58FHII5.js  liquid-B3RFQsLH.js  (+9 more)
src/: App.tsx  index.css  main.tsx
src/components/: SteamboatLoader.module.css  SteamboatLoader.tsx
src/hooks/: useJobQueue.ts  useQueryHistory.ts
src/lib/: monaco.ts
src/services/: api.test.ts  api.ts
tests/: conftest.py  performance.spec.ts  repro_bug.py  test_api_nested_structs.py  test_conditional_data.py  test_dependencies.py  test_jobs_api.py  test_queue_db.py  test_runner.py  test_security_fixes.py  test_spark_config.py  test_table.py  test_utils.py
tests/e2e/: test_workspace_initial_state.py
(+25 files in other folders)
