[project]
name = "secondmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pyspark>=4.1.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
secondmate = "secondmate.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["secondmate"]
