[project]
name = "secondmate"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pyspark>=4.0.0",
    "uvicorn>=0.40.0",
]

[project.scripts]
secondmate = "secondmate.cli:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["secondmate"]

[tool.hatch.build.targets.wheel.force-include]
"secondmate/static" = "secondmate/static"

[tool.hatch.build.targets.sdist.force-include]
"secondmate/static" = "secondmate/static"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
